WIP wall + hebergement ok + top ok

--- a/Projet_2.html
+++ b/Projet_2.html
@@ -89,7 +89,7 @@
             <div class="card bottomDescription">
               <img
                 src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                alt="auberge la cannebiere"
               />
 
               <div class="cardDescription">
@@ -154,7 +154,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 alt="hotel de la mer"
               />
 
@@ -166,7 +166,7 @@
                   <i class="fas fa-star starsUp"></i>
                   <i class="fas fa-star starsUp"></i>
                   <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsUp"></i>
+                  <i class="fas fa-star starsDown"></i>
                   <i class="fas fa-star starsDown"></i>
                 </div>
               </div>
@@ -176,13 +176,13 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                alt="auberge le panier"
               />
 
               <div class="cardDescription">
-                <p><strong>Auberge la Cannebière</strong></p>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <p><strong>Auberge Le Panier</strong></p>
+                <p>Nuit à partir de <strong>23€</strong></p>
 
                 <div class="stars">
                   <i class="fas fa-star starsUp"></i>
@@ -198,25 +198,24 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                alt="hotel chez amina"
               />
 
               <div class="cardDescription">
-                <p><strong>Auberge la Cannebière</strong></p>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <p><strong>Hôtel chez Amina</strong></p>
+                <p>Nuit à partir de <strong>96€</strong></p>
 
                 <div class="stars">
                   <i class="fas fa-star starsUp"></i>
                   <i class="fas fa-star starsUp"></i>
                   <i class="fas fa-star starsUp"></i>
                   <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsDown"></i>
+                  <i class="fas fa-star starsUp"></i>
                 </div>
               </div>
             </div>
           </a>
-          <div style="flex-grow: 1"></div>
         </div>
         <p><strong>Afficher plus</strong></p>
       </div>
@@ -230,13 +229,35 @@
           <a href="#">
             <div class="card rightDescription">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                alt="hotel le soleil du matin"
               />
 
               <div class="cardDescription">
-                <p><strong>Auberge la Cannebière</strong></p>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <p><strong>Hôtel Le soleil du matin</strong></p>
+                <p>Nuit à partir de <strong>128€</strong></p>
+
+                <div class="stars">
+                  <i class="fas fa-star starsUp"></i>
+                  <i class="fas fa-star starsUp"></i>
+                  <i class="fas fa-star starsUp"></i>
+                  <i class="fas fa-star starsUp"></i>
+                  <i class="fas fa-star starsUp"></i>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="card rightDescription">
+              <img
+                src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"
+                alt="au coeur de l'eau chambres d'hôtes"
+              />
+
+              <div class="cardDescription">
+                <p><strong>Au cœur de l'eau Chambres d'hôtes</strong></p>
+                <p>Nuit à partir de <strong>71€</strong></p>
 
                 <div class="stars">
                   <i class="fas fa-star starsUp"></i>
@@ -252,13 +273,13 @@
           <a href="#">
             <div class="card rightDescription">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                alt="hotel tout bleu et blanc"
               />
 
               <div class="cardDescription">
-                <p><strong>Auberge la Cannebière</strong></p>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <p><strong>Hôtel Tout bleu et Blanc</strong></p>
+                <p>Nuit à partir de <strong>68€</strong></p>
 
                 <div class="stars">
                   <i class="fas fa-star starsUp"></i>
@@ -270,25 +291,51 @@
               </div>
             </div>
           </a>
+        </div>
+      </div>
 
+      <div class="contentContainer bottom">
+        <p><strong>Activités à Marseille</strong></p>
+
+        <div class="cardContainer wall">
           <a href="#">
-            <div class="card rightDescription">
+            <div class="card bigImage">
               <img
-                src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                alt="auberge"
+                src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                alt="activite"
+                id="img1"
               />
 
               <div class="cardDescription">
-                <p><strong>Auberge la Cannebière</strong></p>
-                <p>Nuit à partir de <strong>25€</strong></p>
+                <p><strong>Hôtel Le soleil du matin</strong></p>
+              </div>
+            </div>
+          </a>
 
-                <div class="stars">
-                  <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsUp"></i>
-                  <i class="fas fa-star starsDown"></i>
-                </div>
+          <a href="#">
+            <div class="card bigImage">
+              <img
+                src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                alt="activite"
+                id="img2"
+              />
+
+              <div class="cardDescription">
+                <p><strong>Hôtel Le soleil du matin</strong></p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="card bigImage">
+              <img
+                src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                alt="activite"
+                id="img3"
+              />
+
+              <div class="cardDescription">
+                <p><strong>Hôtel Le soleil du matin</strong></p>
               </div>
             </div>
           </a>
