--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
@@ -110,7 +110,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                 alt="hotel du port"
               />
 
@@ -132,7 +132,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                 alt="hotel les mouettes"
               />
 
@@ -154,7 +154,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                 alt="hotel de la mer"
               />
 
@@ -176,7 +176,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                 alt="auberge le panier"
               />
 
@@ -198,7 +198,7 @@
           <a href="#">
             <div class="card bottomDescription">
               <img
-                src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                 alt="hotel chez amina"
               />
 
@@ -229,7 +229,7 @@
           <a href="#">
             <div class="card rightDescription">
               <img
-                src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                 alt="hotel le soleil du matin"
               />
 
@@ -251,12 +251,14 @@
           <a href="#">
             <div class="card rightDescription">
               <img
-                src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"
+                src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                 alt="au coeur de l'eau chambres d'hôtes"
               />
 
               <div class="cardDescription">
-                <p><strong>Au cœur de l'eau Chambres d'hôtes</strong></p>
+                <p>
+                  <strong>Au cœur de l'eau <br />Chambres d'hôtes</strong>
+                </p>
                 <p>Nuit à partir de <strong>71€</strong></p>
 
                 <div class="stars">
@@ -273,7 +275,7 @@
           <a href="#">
             <div class="card rightDescription">
               <img
-                src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                 alt="hotel tout bleu et blanc"
               />
 
@@ -301,13 +303,13 @@
           <a href="#">
             <div class="card bigImage">
               <img
-                src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="activite"
-                id="img1"
+                class="img1"
               />
 
-              <div class="cardDescription">
-                <p><strong>Hôtel Le soleil du matin</strong></p>
+              <div class="cardBigImageDescription">
+                <p><strong>Vieux Port</strong></p>
               </div>
             </div>
           </a>
@@ -315,13 +317,13 @@
           <a href="#">
             <div class="card bigImage">
               <img
-                src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                 alt="activite"
-                id="img2"
+                class="img2"
               />
 
-              <div class="cardDescription">
-                <p><strong>Hôtel Le soleil du matin</strong></p>
+              <div class="cardBigImageDescription">
+                <p><strong>Fort de Pomègues</strong></p>
               </div>
             </div>
           </a>
@@ -329,13 +331,55 @@
           <a href="#">
             <div class="card bigImage">
               <img
-                src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                 alt="activite"
-                id="img3"
+                class="img3"
               />
 
-              <div class="cardDescription">
-                <p><strong>Hôtel Le soleil du matin</strong></p>
+              <div class="cardBigImageDescription">
+                <p><strong>Îles du Frioul</strong></p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="card bigImage">
+              <img
+                src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                alt="activite"
+                class="img1"
+              />
+
+              <div class="cardBigImageDescription">
+                <p><strong>Parc National des Calanques</strong></p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="card bigImage">
+              <img
+                src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                alt="activite"
+                class="img4"
+              />
+
+              <div class="cardBigImageDescription">
+                <p><strong>Notre-Dame-de-la-Garde</strong></p>
+              </div>
+            </div>
+          </a>
+
+          <a href="#">
+            <div class="card bigImage">
+              <img
+                src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                alt="activite"
+                class="img4"
+              />
+
+              <div class="cardBigImageDescription">
+                <p><strong>Parc Longchamp</strong></p>
               </div>
             </div>
           </a>
@@ -345,8 +389,7 @@
 
     <footer id="foot">
       <ol>
-        <strong>A propos</strong
-        ><br />
+        <strong>A propos</strong>
 
         <li><a href="#">Fonctionnement du site</a><br /></li>
         <li><a href="#">Condition générales de vente</a><br /></li>
@@ -354,16 +397,14 @@
       </ol>
 
       <ol>
-        <strong>Nos hébergements</strong
-        ><br />
+        <strong>Nos hébergements</strong>
 
         <li><a href="#">Charte qualité</a><br /></li>
         <li><a href="#">Soumettre votre hôtel</a><br /></li>
       </ol>
 
       <ol>
-        <strong>Assistance</strong
-        ><br />
+        <strong>Assistance</strong>
 
         <li><a href="#">Centre d'aide</a><br /></li>
         <li><a href="#">Nous contacter</a><br /></li>
