head ok / body ok / foot ok

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
@@ -388,27 +388,39 @@
     </main>
 
     <footer id="foot">
-      <ol>
-        <strong>A propos</strong>
+      <div class="contentFoot">
+        <div class="contentFoot about">
+          <p><strong>A propos</strong></p>
 
-        <li><a href="#">Fonctionnement du site</a><br /></li>
-        <li><a href="#">Condition générales de vente</a><br /></li>
-        <li><a href="#">Donnée et confidentialité</a><br /></li>
-      </ol>
+          <ol>
+            <li><a href="#">Fonctionnement du site</a><br /></li>
+            <li><a href="#">Condition générales de vente</a><br /></li>
+            <li><a href="#">Donnée et confidentialité</a><br /></li>
+          </ol>
+        </div>
 
-      <ol>
-        <strong>Nos hébergements</strong>
+        <div class="contentFoot accommodation">
+          <p>
+            <strong>Nos hébergements</strong>
+          </p>
 
-        <li><a href="#">Charte qualité</a><br /></li>
-        <li><a href="#">Soumettre votre hôtel</a><br /></li>
-      </ol>
+          <ol>
+            <li><a href="#">Charte qualité</a><br /></li>
+            <li><a href="#">Soumettre votre hôtel</a><br /></li>
+          </ol>
+        </div>
 
-      <ol>
-        <strong>Assistance</strong>
+        <div class="contentFoot help">
+          <p>
+            <strong>Assistance</strong>
+          </p>
 
-        <li><a href="#">Centre d'aide</a><br /></li>
-        <li><a href="#">Nous contacter</a><br /></li>
-      </ol>
+          <ol>
+            <li><a href="#">Centre d'aide</a><br /></li>
+            <li><a href="#">Nous contacter</a><br /></li>
+          </ol>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
