maj head / body / foot

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </header>
 
-    <main class="mainContainer">
+    <main>
       <div class="contentContainer left">
         <p><strong>Hébergement à Marseille</strong></p>
         <div class="cardContainer wrap">
