HTML + CSS ok ; WIP responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, user-scalable=0"
     />
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="stylesheet" href="style_tel.css" />
     <script
       src="https://kit.fontawesome.com/aacc6b388d.js"
       crossorigin="anonymous"
@@ -18,21 +18,21 @@
 
   <body>
     <div id="bloc_page">
-      <nav>
-        <img src="images/logo/Reservia.png" alt="logo" id="logo" />
-        <div class="navigation">
-          <ul>
-            <li><a href="#home">Hébergement</a></li>
-
-            <li><a href="#activités">Activités</a></li>
-          </ul>
-          <button class="registerButton" type="button">
-            <span class="bold">S'inscrire</span>
-          </button>
-        </div>
-      </nav>
-
       <header>
+        <nav>
+          <img src="images/logo/Reservia.png" alt="logo" id="logo" />
+          <div class="navigation">
+            <ul>
+              <li><a href="#home">Hébergement</a></li>
+
+              <li><a href="#activités">Activités</a></li>
+            </ul>
+            <button class="registerButton" type="button">
+              <span class="bold">S'inscrire</span>
+            </button>
+          </div>
+        </nav>
+
         <h1>
           <strong>Trouvez votre hébergement pour des vacances de rêve</strong>
         </h1>
@@ -229,7 +229,7 @@
 
         <div class="contentContainer right">
           <div class="contentContainerTitle">
-            <p><strong>Hébergement à Marseille</strong></p>
+            <p><strong>Les plus populaires</strong></p>
             <i class="fas fa-chart-line"></i>
           </div>
           <div class="cardContainer column">
@@ -306,9 +306,9 @@
         <div class="contentContainer bottom">
           <p><strong>Activités à Marseille</strong></p>
 
-          <div class="cardContainer wall">
+          <div class="cardContainer card1">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage one">
                 <img
                   src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                   alt="activite"
@@ -320,9 +320,10 @@
                 </div>
               </div>
             </a>
-
+          </div>
+          <div class="cardContainer card2">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage two">
                 <img
                   src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                   alt="activite"
@@ -334,9 +335,10 @@
                 </div>
               </div>
             </a>
-
+          </div>
+          <div class="cardContainer card3">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage three">
                 <img
                   src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                   alt="activite"
@@ -348,13 +350,14 @@
                 </div>
               </div>
             </a>
-
+          </div>
+          <div class="cardContainer card4">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage four">
                 <img
                   src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                   alt="activite"
-                  class="img1"
+                  class="img4"
                 />
 
                 <div class="cardBigImageDescription">
@@ -362,13 +365,14 @@
                 </div>
               </div>
             </a>
-
+          </div>
+          <div class="cardContainer card5">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage five">
                 <img
                   src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                   alt="activite"
-                  class="img4"
+                  class="img5"
                 />
 
                 <div class="cardBigImageDescription">
@@ -376,13 +380,14 @@
                 </div>
               </div>
             </a>
-
+          </div>
+          <div class="cardContainer card6">
             <a href="#">
-              <div class="card bigImage">
+              <div class="cardBigImage six">
                 <img
                   src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                   alt="activite"
-                  class="img4"
+                  class="img6"
                 />
 
                 <div class="cardBigImageDescription">
