--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
         </div>
 
         <div class="contentContainer bottom">
-          <p><strong>Activités à Marseille</strong></p>
-
-          <div class="cardContainer card1">
-            <a href="#">
-              <div class="cardBigImage one">
+          <div class="cardContainerTitle">
+            <p><strong>Activités à Marseille</strong></p>
+          </div>
+          <div class="bottomCard">
+            <a id="photo1" href="#">
+              <div class="cardBigImage1">
                 <img
                   src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                   alt="activite"
-                  class="img1"
                 />
 
                 <div class="cardBigImageDescription">
@@ -320,14 +320,12 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="cardContainer card2">
-            <a href="#">
-              <div class="cardBigImage two">
+
+            <a id="photo2" href="#">
+              <div class="cardBigImage2">
                 <img
                   src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                   alt="activite"
-                  class="img2"
                 />
 
                 <div class="cardBigImageDescription">
@@ -335,14 +333,12 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="cardContainer card3">
-            <a href="#">
-              <div class="cardBigImage three">
+
+            <a id="photo3" href="#">
+              <div class="cardBigImage3">
                 <img
                   src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                   alt="activite"
-                  class="img3"
                 />
 
                 <div class="cardBigImageDescription">
@@ -350,14 +346,12 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="cardContainer card4">
-            <a href="#">
-              <div class="cardBigImage four">
+
+            <a id="photo4" href="#">
+              <div class="cardBigImage4">
                 <img
                   src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                   alt="activite"
-                  class="img4"
                 />
 
                 <div class="cardBigImageDescription">
@@ -365,14 +359,12 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="cardContainer card5">
-            <a href="#">
-              <div class="cardBigImage five">
+
+            <a id="photo5" href="#">
+              <div class="cardBigImage5">
                 <img
                   src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                   alt="activite"
-                  class="img5"
                 />
 
                 <div class="cardBigImageDescription">
@@ -380,14 +372,12 @@
                 </div>
               </div>
             </a>
-          </div>
-          <div class="cardContainer card6">
-            <a href="#">
-              <div class="cardBigImage six">
+
+            <a id="photo6" href="#">
+              <div class="cardBigImage6">
                 <img
                   src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                   alt="activite"
-                  class="img6"
                 />
 
                 <div class="cardBigImageDescription">
