wip responsiv 320px/2

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
           <button type="submit" class="searchbutton">
             <strong>Rechercher</strong>
+            <i class="fas fa-search"></i>
           </button>
         </div>
 
