--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       content="width=device-width, initial-scale=1, user-scalable=0"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_tab.css" />
     <link rel="stylesheet" href="style_tel.css" />
+
     <script
       src="https://kit.fontawesome.com/aacc6b388d.js"
       crossorigin="anonymous"
@@ -48,7 +50,7 @@
 
           <button type="submit" class="searchbutton">
             <strong>Rechercher</strong>
-            <i class="fas fa-search"></i>
+            <i class="fas fa-search fa-1x"></i>
           </button>
         </div>
 
