--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
               <li><a href="#home">Hébergement</a></li>
 
-              <li><a href="#activités">Activités</a></li>
+              <li><a href="#activity">Activités</a></li>
             </ul>
             <button class="registerButton" type="button">
               <span class="bold">S'inscrire</span>
@@ -92,7 +92,7 @@
       </header>
 
       <main>
-        <div class="contentContainer left">
+        <div id="home" class="contentContainer left">
           <p><strong>Hébergement à Marseille</strong></p>
           <div class="cardContainer wrap">
             <a href="#">
@@ -306,7 +306,7 @@
           </div>
         </div>
 
-        <div class="contentContainer bottom">
+        <div id="activity" class="contentContainer bottom">
           <div class="cardContainerTitle">
             <p><strong>Activités à Marseille</strong></p>
           </div>
