--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="images/logo/Reservia.png" alt="logo" id="logo" />
           <div class="navigation">
             <ul>
-              <li><a href="#home">Hébergement</a></li>
+              <li><a href="#home">Hébergements</a></li>
 
               <li><a href="#activity">Activités</a></li>
             </ul>
@@ -93,7 +93,7 @@
 
       <main>
         <div id="home" class="contentContainer left">
-          <p><strong>Hébergement à Marseille</strong></p>
+          <p><strong>Hébergements à Marseille</strong></p>
           <div class="cardContainer wrap">
             <a href="#">
               <div class="card bottomDescription">
